# thebrain

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  hippo.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-artifacts.yml  runpod.yml
examples/: bench_recall.py  demo.py  demo_agent.py  demo_decode.py  demo_language_granite.py  demo_multimodal.py  demo_multimodal_fused.py  multimodal_feed.py  vision_feed.py  viz_attention.py
frontend/: app.py
hardware/jetson_nx/notes/: README.md
hardware/jetson_nx/scripts/: csi_cam_test.py  dual_csi_snapshot.py  i2c_ping_0x40_bus7.py  multi_servo_test.py  pca9685_ch0_watch.py  pca9685_init_and_test_ch0.py  pca9685_probe.py  pca9685_write_one.py  pca_write_test_anybus.py  servo_dual_csi_capture.py  servo_test_pca9685.py  servo_test_pca9685_bus7.py  tilt_cal_sweep.py
runpod/: job_template.json
scripts/: __init__.py  inspect_replay.py  inspect_replay_npz.py  pull_latest.py  pull_push_artifacts.py  run_pi_daemon.py  train_cloud.py  train_from_replay.py
scripts/systemd/: hippocampus-pull-latest.service  hippocampus-pull-latest.timer  thebrain-feed.service  thebrain-pi-daemon.service  thebrain-ui.service
src/agents/pi_daemon/: __init__.py  config.py  daemon.py  encoders.py  episodes.py  sensors.py
src/hippocampus/: __init__.py  artifacts.py  cli.py  decoders.py  introspection.py  loader.py  memory_io.py  module.py  telemetry.py
src/hippocampus/integrations/: __init__.py  granite.py  ibm_granite.py
tests/: test_basic.py  test_pi_daemon.py
