
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hippocampus"
version = "0.1.0"
description = "Hippocampus-like episodic memory for AI."
readme = "README.md"
license = {text = "MIT"}
authors = [{name="Your Team"}]
requires-python = ">=3.9"
dependencies = ["torch>=2.1.0","numpy>=1.23"]
[project.optional-dependencies]
dev = ["pytest>=7.0"]
[project.scripts]
hippo-demo = "examples.demo:main"
[tool.setuptools.packages.find]
where = ["src"]
